// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`okhttp > curl: 'adds basic auth credentials' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Authorization", "Basic dXNlcjpwYXNz")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'doesn\\'t add empty cookies' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'doesn\\'t add empty headers' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'escapes single quotes in JSON body' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/json"), "\\"hell'o\\"");

Request request = new Request.Builder()
  .url("https://editor.scalar.com/test")
  .method("POST", body)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles JSON body with special charac…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/json"), "{\\"key\\":\\"\\\\\\"quotes\\\\\\" and \\\\\\\\backslashes\\\\\\\\\\",\\"nested\\":{\\"array\\":[\\"item1\\",null,null]}}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles URLs with dollar sign charact…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/path$with$dollars")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles URLs with dollar signs in pat…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/api$v1/prices?amount=%2450.00")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles URLs with dollar signs in que…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com?price=%24100&currency=USD%24")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles binary data flag' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/octet-stream"), "binary content");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/octet-stream")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles compressed response' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Accept-Encoding", "gzip, deflate")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles cookies with special characte…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Cookie", "special%3Bcookie=value%20with%20spaces")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles empty URL' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles extremely long URLs' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles headers with empty values' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("X-Empty", "")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data content t…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("user", null, RequestBody.create(MediaType.parse("application/json;charset=utf-8"), "{\\"name\\":\\"scalar\\"}"))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data content t…' 2`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "test.txt", RequestBody.create(MediaType.parse("text/plain"), new java.io.File("test.txt")))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data with JSON…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("multipart/form-data"), "{\\"foo\\":\\"bar\\"}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "multipart/form-data")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data with empt…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "", RequestBody.create(MediaType.parse("application/octet-stream"), new java.io.File("")))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data with files' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "test.txt", RequestBody.create(MediaType.parse("application/octet-stream"), new java.io.File("test.txt")))
  .addFormDataPart("field", "value")
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multipart form data with sing…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("field'name", "value")
  .addFormDataPart("file'name", "test.txt", RequestBody.create(MediaType.parse("application/octet-stream"), new java.io.File("test.txt")))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles multiple headers with same na…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("X-Custom", "value1")
  .addHeader("X-Custom", "value2")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles special characters in URL' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/path%20with%20spaces/[brackets]")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles special characters in auth cr…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Authorization", "Basic dXNlckBleGFtcGxlLmNvbTpwYXNzOndvcmQh")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles special characters in query p…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com?q=hello%20world%20%26%20more&special=!%40%23%24%25%5E%26*()")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles undefined auth object' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles url-encoded form data with si…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new FormBody.Builder()
  .add("field'name", "value")
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/x-www-form-urlencoded")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'handles url-encoded form data with sp…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new FormBody.Builder()
  .add("special chars!@#", "value")
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/x-www-form-urlencoded")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'has JSON body' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/json"), "{\\"hello\\":\\"world\\"}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'has cookies' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Cookie", "foo=bar; bar=foo")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'has headers' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'has query string' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com?foo=bar&bar=foo")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'joins query string parameters with & …' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/api?existing=1&foo=bar")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'leaves non-JSON multipart values unto…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/json"), "not json"))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'omits auth when not provided' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'omits auth when password is missing' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'omits auth when username is missing' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'prettifies JSON body' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/json"), "{\\"nested\\":{\\"array\\":[1,2,3],\\"object\\":{\\"foo\\":\\"bar\\"}},\\"simple\\":\\"value\\"}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'pretty-prints --data bodies whose mim…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/vnd.api+json"), "{\\"a\\":1}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/vnd.api+json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'pretty-prints --data bodies whose mim…' 2`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/json;charset=utf-8"), "{\\"a\\":1}");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/json;charset=utf-8")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'pretty-prints --form parts whose cont…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/vnd.custom+json"), "{\\"a\\":1}"))
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'pretty-prints JSON multipart parts al…' 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "filename", RequestBody.create(MediaType.parse("application/octet-stream"), new java.io.File("filename")))
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/json"), "{\\"name\\":\\"\\",\\"description\\":\\"\\",\\"created_at\\":null}"))
  .build();

Request request = new Request.Builder()
  .url("https://example.com/widget/v1/widgets")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'quotes a URL whose query string has n…' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/api?param1=value1&param2=value2")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'returns a POST request' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", RequestBody.create(null, ""))
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > curl: 'returns a basic request' 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles binary data 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = RequestBody.create(MediaType.parse("application/octet-stream"), "binary content");

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .addHeader("Content-Type", "application/octet-stream")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles headers with empty values 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("X-Empty", "")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles multipart form data with files 1`] = `
"OkHttpClient client = new OkHttpClient();

RequestBody body = new MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "test.txt", RequestBody.create(MediaType.parse("application/octet-stream"), new java.io.File("test.txt")))
  .addFormDataPart("field", "value")
  .build();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", body)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles multiple headers with same name 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("X-Custom", "value1")
  .addHeader("X-Custom", "value2")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles query string parameters 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/api?param1=value1&param2=special%20value&param3=123")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > handles special characters in URL 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com/path%20with%20spaces/[brackets]")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > has headers 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .addHeader("Content-Type", "application/json")
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > returns a POST request 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("POST", RequestBody.create(null, ""))
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;

exports[`okhttp > returns a basic request 1`] = `
"OkHttpClient client = new OkHttpClient();

Request request = new Request.Builder()
  .url("https://example.com")
  .method("GET", null)
  .build();

try (Response response = client.newCall(request).execute()) {
  System.out.println(response.body().string());
}"
`;
